deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: podinfo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - podinfo.famillelebreuil.net
      secretName: podinfo-tls
  rules:
    - host: podinfo.famillelebreuil.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
